Correct overridden link color overriding too much

--- a/webroot/css/tag_editor.less
+++ b/webroot/css/tag_editor.less
@@ -50,6 +50,10 @@
 	.ui-widget-content {
 		a {
 			color: #0099BB;
+			
+			&.selected {
+				color: #000;
+			}
 		}
 	}
 }
